public/style.css
.main {
  display: flex;
  flex-direction: column;
}

.splash-modal {
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 40%;
  left: 25%;
  top: 15%;
  background-color: rgba(20, 10, 50, 0.8);
  padding: 5%;
  border-radius: 50px;
}

.splash-modal * {
  margin: 10px;
}

.splash-modal .text {
  color: silver;
}

.editor {
  align-self: center;
  border-color: black;
  border-style: solid;
  border-width: 0.2rem;
  width: 15rem;
  padding: 2rem;
  margin-top: 2rem;
}

.grand-staff {
  display: flex;
  flex-direction: column;
  width: 100%;
  cursor: url("notehead.png") 8 8, auto;
}

.staff {
  display: flex;
  flex-direction: column;
}

.clef {
  position: absolute;
  width: 2rem;
  height: 6rem;
}

.staff-line-unit {
  background-color: black;
  height: 3px;
}

.staff-space-unit {
  height: 2px;
}

.staff-ledger-line-unit {
  height: 3px;
}

.staff-slot:hover {
  background-color: rgba(0, 139, 139, 0.3);
}

.staff-slot:hover .staff-ledger-line-unit {
  width: 1.5rem;
  background-color: black;
  position: relative;
  left: 50%;
  top: 1px;
  transform: translate(-50%, -50%);
}

.note-column {
  display: grid;
  pointer-events: none;
  grid-template-columns: 20px 20px 20px;
  grid-template-rows:
    12px repeat(4, 3px 11px) repeat(5, 3px 10px) 4px 11px
    repeat(4, 3px 10px) repeat(4, 3px 11px) 3px;
  position: absolute;
  top: 4.5rem;
  left: 50%;
  transform: translate(-50%, 0%);
  z-index: 1;
}

.accidental-button {
  border-radius: 100rem;
  width: 3rem;
  height: 3rem;
  background-color: darkcyan;
}

.accidental-button.active {
  background-color: palevioletred;
}

.accidental-on-button {
  fill: lightcyan;
}

.toolbar {
  display: flex;
  flex-direction: column;
}

.toolbar-row {
  display: flex;
  justify-content: space-around;
  margin-top: 0.2rem;
}

